# amplify

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.cfg  data.db-shm  data.db-wal  docker-compose.yml  tmp.txt
.devcontainer/: devcontainer.json
data/: config.cfg  data.db  data.db-shm  data.db-wal
langs/: languages.json
langs/c/: run.sh
langs/cpp/: Dockerfile  run.sh
langs/js/: Dockerfile  run.sh
langs/python/: Dockerfile  run.sh
langs/rust/: Cargo.toml  Dockerfile  main.rs  run.sh
src/: app.rs  common.rs  config.rs  database.rs  main.rs
src/api/: generic_self.rs  get_generic_self.rs  langs.rs  leaderboard.rs  mod.rs  problem.rs  problems.rs  profile.rs  solve.rs  stats.rs
src/auth/: auth_redirect.rs  complete.rs  logout.rs  mod.rs  redirect.rs
src/problems/: base_64_decode.rs  bracket_depth.rs  brain_f.rs  common.rs  conways_game_of_life.rs  duration_parser.rs  idea.md  increase_count.rs  less_simple_math.rs  mod.rs  nth_prime.rs  nth_prine.rs  poker_scorer.rs  position_orders.rs  readable_duration.rs  readme.md  rule_30.rs  rust_tastic.rs  sierpinski_triangle.rs  simple_math.rs  tag_verifier.rs  tic_tac_toe.rs  url_decode.rs
src/problems/text/: base_64_decode.md  bracket_depth.md  brain_f.md  (+16 more)
src/sql/: create_problems.sql  create_sessions.sql  create_solutions.sql  create_users.sql  insert_problem.sql  query_generic_info.sql  query_joins.sql  query_leaderbord.sql  query_problem_info.sql  query_problem_status.sql  query_stats.sql  update_not_new.sql  upsert_login.sql  upsert_problems.sql  upsert_solutions.sql
web/scss/: index.scss
web/static/: index.html  index.js
web/tmp-scss/: index.css  index.css.map
(+3 files in other folders)
