[package]
name = "amplify"
version = "0.1.0"
edition = "2021"

[dependencies]
# afire = { git = "https://github.com/Basicprogrammer10/afire.git", branch = "dev", features = ["extensions", "tracing"] }
afire = { version = "1.1.0", features = ["serve_static", "logging", "tracing"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
simple_config_parser = "1.0.0"
ureq = "2.4.0"
serde_json = "1.0.79"
parking_lot = "0.12.0"
rand = "0.8.5"
tempfile = "3.3.0"
lazy_static = "1.4.0"
urlencoding = "2.1.0"
rand_chacha = "0.3.1"